# plasma-spiffy

./: .gitignore  CMakeLists.txt  Messages.sh  README.md  compile_commands.json
icons/: CMakeLists.txt  hi22-apps-plasmacrisp.svgz  hi32-apps-plasmacrisp.svgz  hi64-apps-plasmacrisp.svgz
src/: AttachmentModel.cpp  AttachmentModel.h  CMakeLists.txt  EditorHighlight.cpp  crisp.cpp  crisp.h  editorhighlight.cpp  editorhighlight.h  tagger.cpp  tagger.h
src/package/: metadata.desktop  metadata.json
src/package/contents/images/: icon.svgz
src/package/contents/ui/: NoteHeader.qml  NoteHeader.qmlc  NoteHeaderPreview.qml  main.qml  main.qmlc
src/utils/: MimeDataIterator.h
